--- a/videoproj/index.html
+++ b/videoproj/index.html
@@ -4,30 +4,24 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" type="text/css" href="css/normalize.min.css">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>Video Angular</title>
 </head>
 <body >
 	<header>
-		<div class="container">
-			<div class="header-cont">
-				<h1 class="header-cont-text">FRONTEND 
+		<div class="container" ng-controller="videoCtrl">
+			<div class="header-cont" >
+				<span class="header-cont-text">FRONTEND 
 					<i class="glyphicon glyphicon-play"></i>
 					VIDEO
-				</h1>
-				<div class="flex-auth">
-					<img src="css/ava.jpg" alt="..." class="img-circle">
-					<div class="flex-auth-text">
-						<span>Hello</span>
-					</br>
-					<a class="flex-auth-text-logout">logout</a>
-				</div>
-			</div>
+				</span>
+				<login-dir></login-dir>
 		</div>
 	</div>
 </header>
@@ -39,14 +33,20 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.js" ></script>
-
+<script   src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
+<script type="text/javascript" src="libs/maskedinput.js"></script>
 <script type="text/javascript" src="js/app/modules/main.module.js"></script>
 <script type="text/javascript" src="js/app/configs/constants/url.constants.js"></script>
+
 <script type="text/javascript" src="js/app/configs/router.config.js"></script>
 <script type="text/javascript" src="js/app/services/main.service.js"></script>
 
 <script type="text/javascript" src="js/app/factories/main.factory.js"></script>
+<script type="text/javascript" src="js/app/factories/login.fatory.js"></script>
+
 <script type="text/javascript" src="js/appmodule/app.module.js"></script>
+<script type="text/javascript" src="js/app/directives/login.directive.js"></script>
+<script type="text/javascript" src="js/appcontroller/app.controller.js"></script>
 <script type="text/javascript" src="js/auth/authCtrl.js"></script>
 <script type="text/javascript" src="js/items/itemsCtrl.js"></script>
 <script type="text/javascript" src="js/add/addCtrl.js"></script>
