--- a/videoproj/js/auth/auth.html
+++ b/videoproj/js/auth/auth.html
@@ -5,21 +5,23 @@
 		
 		<div class="form-group" ng-class="{ 'has-error' : auth.login.$invalid && !auth.login.$pristine }">
 			<label>Username:</label>
-			<input type="text" name="login" class="form-control"  ng-model="login" ng-minlength="3" ng-maxlength="15" required ">
+			<input type="text" name="login" class="form-control"  ng-model="loginInp" ng-minlength="3" ng-maxlength="15" ng-pattern="/^[a-zA-Z][a-zA-Z0-9-_\.]{1,20}$/" required ">
 			<p ng-show="auth.login.$error.minlength" class="help-block">login is too short.</p>
 			<p ng-show="auth.login.$error.maxlength" class="help-block">login is too long.</p>
+			<p ng-show="auth.title.$error.pattern" class="help-block">Type another login, it chould start with letter and contain letters and number</p>
 		</div >
 
 		<div class="form-group" ng-class="{ 'has-error' : auth.password.$invalid && !auth.password.$pristine }">
 			<label>Password:</label>
-			<input type="password" name="password" class="form-control"  ng-model="password" ng-minlength="3" ng-maxlength="15" required ">
+			<input type="password" name="password" class="form-control"  ng-model="passwordInp" ng-minlength="3" ng-maxlength="15" ng-pattern="/^[a-zA-Z][a-zA-Z0-9-_\.]{1,20}$/" required ">
 			<p ng-show="auth.password.$error.minlength" class="help-block">password is too short.</p>
 			<p ng-show="auth.password.$error.maxlength" class="help-block">password is too long.</p>
+			<p ng-show="auth.title.$error.pattern" class="help-block">Type another password, it chould start with letter and contain letters and number</p>
 		</div >
 
 
 
-		<button class="button button-login" ng-click="authcheck()" ng-disabled="form.$invalid"> Login</button> 
+		<button class="button button-login" ng-class="auth.$invalid ? 'button-cancel_disabled' : ''" ng-click="logInCtrl()" ng-disabled="auth.$invalid"> Login</button> 
 		
 
 	</form>
