--- a/videoproj/js/auth/auth.html
+++ b/videoproj/js/auth/auth.html
@@ -3,20 +3,20 @@
 	<h1 >Autorization</h1>
 	<form  name="auth" >
 		
-		<div class="form-group" ng-class="{ 'has-error' : auth.login.$invalid && !auth.login.$pristine }">
+		<div class="form-group" ng-class="{ 'has-error' : auth.login.$invalid && auth.login.$touched }">
 			<label>Username:</label>
 			<input type="text" name="login" class="form-control"  ng-model="loginInp" ng-minlength="3" ng-maxlength="15" ng-pattern="/^[a-zA-Z][a-zA-Z0-9-_\.]{1,20}$/" required ">
-			<p ng-show="auth.login.$error.minlength" class="help-block">login is too short.</p>
-			<p ng-show="auth.login.$error.maxlength" class="help-block">login is too long.</p>
-			<p ng-show="auth.title.$error.pattern" class="help-block">Type another login, it chould start with letter and contain letters and number</p>
+			<p ng-show="auth.login.$error.minlength && auth.login.$touched" class="help-block">login is too short.</p>
+			<p ng-show="auth.login.$error.maxlength && auth.login.$touched" class="help-block">login is too long.</p>
+			<p ng-show="auth.login.$error.pattern && auth.login.$touched" class="help-block">Type another login, it chould start with letter and contain letters and number</p>
 		</div >
 
-		<div class="form-group" ng-class="{ 'has-error' : auth.password.$invalid && !auth.password.$pristine }">
+		<div class="form-group" ng-class="{ 'has-error' : auth.password.$invalid && auth.password.$touched }">
 			<label>Password:</label>
 			<input type="password" name="password" class="form-control"  ng-model="passwordInp" ng-minlength="3" ng-maxlength="15" ng-pattern="/^[a-zA-Z][a-zA-Z0-9-_\.]{1,20}$/" required ">
-			<p ng-show="auth.password.$error.minlength" class="help-block">password is too short.</p>
-			<p ng-show="auth.password.$error.maxlength" class="help-block">password is too long.</p>
-			<p ng-show="auth.title.$error.pattern" class="help-block">Type another password, it chould start with letter and contain letters and number</p>
+			<p ng-show="auth.password.$error.minlength && auth.password.$touched" class="help-block">password is too short.</p>
+			<p ng-show="auth.password.$error.maxlength  && auth.password.$touched"" class="help-block">password is too long.</p>
+			<p ng-show="auth.title.$error.pattern  && auth.password.$touched"" class="help-block">Type another password, it chould start with letter and contain letters and number</p>
 		</div >
 
 
