--- a/videoproj/index.html
+++ b/videoproj/index.html
@@ -22,36 +22,40 @@
 					VIDEO
 				</span>
 				<login-dir></login-dir>
+			</div>
 		</div>
-	</div>
-</header>
-<section>          
-	<div class="container">
-		<div ui-view></div> 
-	</div> 
-</section>
+	</header>
+	<section>          
+		<div class="container">
+			<div ui-view></div> 
+		</div> 
+	</section>
 
-<script type="text/javascript" src="bower_components/angular/angular.js"></script>
-<script type="text/javascript" src="bower_components/angular-ui-mask/dist/mask.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.js" ></script>
+	<script type="text/javascript" src="bower_components/angular/angular.js"></script>
+	<script type="text/javascript" src="bower_components/angular-ui-mask/dist/mask.js"></script>
+	<!--<script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>-->
+	<script src="ui-bootstrap-tpls-2.1.3.min.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.js" ></script>
 
-<script   src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
-<script type="text/javascript" src="libs/maskedinput.js"></script>
-<script type="text/javascript" src="js/app/modules/main.module.js"></script>
-<script type="text/javascript" src="js/app/configs/constants/url.constants.js"></script>
+	<script   src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
+	<script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+	<script data-require="ui-bootstrap@*" data-semver="0.12.1" src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.12.1.min.js"></script>
+	<script type="text/javascript" src="libs/maskedinput.js"></script>
+	<script type="text/javascript" src="js/app/modules/main.module.js"></script>
+	<script type="text/javascript" src="js/app/configs/constants/url.constants.js"></script>
 
-<script type="text/javascript" src="js/app/configs/router.config.js"></script>
-<script type="text/javascript" src="js/app/services/main.service.js"></script>
-<script type="text/javascript" src="js/app/services/edit.service.js"></script>
-<script type="text/javascript" src="js/app/factories/main.factory.js"></script>
-<script type="text/javascript" src="js/app/factories/login.fatory.js"></script>
+	<script type="text/javascript" src="js/app/configs/router.config.js"></script>
+	<script type="text/javascript" src="js/app/services/main.service.js"></script>
+	<script type="text/javascript" src="js/app/services/edit.service.js"></script>
+	<script type="text/javascript" src="js/app/factories/main.factory.js"></script>
+	<script type="text/javascript" src="js/app/factories/login.fatory.js"></script>
 
-<script type="text/javascript" src="js/appmodule/app.module.js"></script>
-<script type="text/javascript" src="js/app/directives/login.directive.js"></script>
-<script type="text/javascript" src="js/appcontroller/app.controller.js"></script>
-<script type="text/javascript" src="js/auth/authCtrl.js"></script>
-<script type="text/javascript" src="js/items/itemsCtrl.js"></script>
-<script type="text/javascript" src="js/add/addCtrl.js"></script>
+	<script type="text/javascript" src="js/appmodule/app.module.js"></script>
+	<script type="text/javascript" src="js/app/directives/login.directive.js"></script>
+	<script type="text/javascript" src="js/appcontroller/app.controller.js"></script>
+	<script type="text/javascript" src="js/auth/authCtrl.js"></script>
+	<script type="text/javascript" src="js/items/itemsCtrl.js"></script>
+	<script type="text/javascript" src="js/add/addCtrl.js"></script>
 
 </body>
 </html>
