WOW SO GOOD INPUT mmm such fried

--- a/videoproj/js/items/items.html
+++ b/videoproj/js/items/items.html
@@ -1,10 +1,9 @@
-
 <div>
 	<h1 >Courses</h1>
 	<div class="manage-group">
-		<div class="input-group">		
-			<input type="text" class="form-control" placeholder="type your phrase for search" ng-model="searchText.title" >
-			<span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
+		<div class="search">
+			<input type="text" placeholder="type your phrase for search" ng-model="searchText.title">
+			<span class="fa fa-search"></span>
 		</div>
 		<div>
 			<span>View </span>
