GADKIY GIMP VSE ISPOGANIL NO YA POPRAVIL CSS

--- a/videoproj/js/add/add.html
+++ b/videoproj/js/add/add.html
@@ -29,6 +29,6 @@
 			</div>
 		</div>
 		<button class="button button-login" ng-click="save(model.title)" ng-disabled="add.$invalid">{{addOrEditBut}}</button>
-		<a  ng-click="clearForm()" ui-sref="items" ui-sref-active="active" ><button class="button button-login" > Cancel</button></a>
+		<a  ng-click="clearForm()" ui-sref="items" ui-sref-active="active" ><button class="button button-cancel" > Cancel</button></a>
 	</form>
 </div>
