--- a/videoproj/js/items/items.html
+++ b/videoproj/js/items/items.html
@@ -19,43 +19,45 @@
 			<span> records at a time.</span>
 		</div>
 		<div>
-			<button class=" button button-cancel" ng-class="mayArchive ? 'button button-cancel' : 'button button-cancel button-cancel_disabled  ' " ng-click="archive()" ng-disabled="!mayArchive">Archive Selected</button> 
+			<button class=" button button-archive" ng-class="mayArchive ? 'button button-cancel' : 'button button button-archive' " ng-click="archive()" ng-disabled="!mayArchive">Archive Selected</button> 
 			<a  ui-sref="add" ui-sref-active="active"><button class="button button-login"  > Add New</button></a>
 		</div>
 	</div>
 	<div>
-		<table class="table table-hover">
-			<thead>
-				<tr>
-					<th class=" col-check"><input type="checkbox" ng-click="switchAll()"></th>
-					<th class=" col-id">ID</th>
-					<th class=" col-title">
-						<a ng-click="sortType = 'title'; sortReverse = !sortReverse">
-							Title
-							<i ng-show="sortType == 'title' && !sortReverse" class="glyphicon glyphicon-arrow-up"></i>
-							<i ng-show="sortType == 'title' && sortReverse" class="glyphicon glyphicon-arrow-down"></i>
-						</a>
-					</th>
-					<th class=" col-author">Author</th>
-					<th class=" col-dur">Duration</th>
-					<th class=" col-but ">Actions</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr ng-repeat="video in filteredVideos | filter:searchText |orderBy:sortType:!sortReverse" ng-class="video.archived ? 'disabled':'' " trackby $index >
-					<td class="col-check"><input type="checkbox" ng-model="video.checked" ng-change="checkChecked()" ng-disabled="video.archived"  ></td>
-					<td class="col-id">{{$index}}</td>				
-					<td class="col-title"><a target='_blank' class="titlelink" href="{{video.link}}" ng-disabled="video.archived" ng-class="video.archived ? 'disabled' : ''" >{{video.title}}</a></td>
-					<td class="col-author">{{video.nameUser}}</td>
-					<td class="col-dur">{{video.duration}}</td>
-					<td class="col-but ">
-						<a ng-show="!video.archived" ui-sref="edit({id: video.id})" ui-sref-active="active" ng-click="edit(video)">Edit</a>
-						<a ng-show="!video.archived" ng-click="remove(video)">Delete</a>
-						<a ng-show="video.archived" ng-click="unarchive(video)">Unarchive</a>
-					</td>
-				</tr>
-			</tbody>
-		</table>
+		<div class="table-responsive">
+			<table class="table table-hover table-responsive">
+				<thead>
+					<tr>
+						<th class=" col-check"><input type="checkbox" ng-click="switchAll()"></th>
+						<th class=" col-id">ID</th>
+						<th class=" col-title">
+							<a ng-click="sortType = 'title'; sortReverse = !sortReverse">
+								Title
+								<i ng-show="sortType == 'title' && !sortReverse" class="glyphicon glyphicon-arrow-up"></i>
+								<i ng-show="sortType == 'title' && sortReverse" class="glyphicon glyphicon-arrow-down"></i>
+							</a>
+						</th>
+						<th class=" col-author">Author</th>
+						<th class=" col-dur">Duration</th>
+						<th class=" col-but ">Actions</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr ng-repeat="video in filteredVideos | filter:searchText |orderBy:sortType:!sortReverse" ng-class="video.archived ? 'disabled':'' " trackby $index >
+						<td class="col-check"><input type="checkbox" ng-model="video.checked" ng-change="checkChecked()" ng-disabled="video.archived"  ></td>
+						<td class="col-id">{{$index}}</td>				
+						<td class="col-title"><a target='_blank' class="titlelink" href="{{video.link}}" ng-disabled="video.archived" ng-class="video.archived ? 'disabled' : ''" >{{video.title}}</a></td>
+						<td class="col-author">{{video.nameUser}}</td>
+						<td class="col-dur">{{video.duration}}</td>
+						<td class="col-but ">
+							<a ng-show="!video.archived" ui-sref="edit({id: video.id})" ui-sref-active="active" ng-click="edit(video)">Edit</a>
+							<a ng-show="!video.archived" ng-click="remove(video)">Delete</a>
+							<a ng-show="video.archived" ng-click="unarchive(video)">Unarchive</a>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 		<h1>Count of Videos : {{totalItems}}</h1>		
 		<pagination class="pagination-position"
 		ng-model="currentPage"
